[package]
authors = [
  "Jk Jensen <jk@mystenlabs.com>",
  "Mysten Labs <build@mystenlabs.com>",
]
edition = "2021"
license = "Apache-2.0"
name = "suiop-cli"
publish = false

[lib]
name = "suioplib"
path = "src/lib.rs"

[[bin]]
name = "suiop"
path = "src/main.rs"

[dependencies]
anyhow = "1.0.97"
axum = "0.8.1"
base64 = "0.22.1"
chrono = { version = "0.4.40", features = ["serde"] }
clap = { version = "4.5.32", features = ["derive"] }
colored = "3.0.0"
crossterm = { version = "0.28.1", features = ["event-stream"] }
dirs = "6.0.0"
futures = "0.3.31"
futures-timer = "3.0.3"
include_dir = "0.7.4"
inquire = "0.7.5"
once_cell = "1.21.1"
open = "5.3.2"
query-shell = "0.3.0"
rand = "0.8.5"
regex = "1.11.1"
reqwest = { version = "0.12.14", features = ["rustls-tls", "json"] }
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
serde_yaml = "0.9.34"
sha2 = "0.10.8"
spinners = "4.1.1"
strsim = "0.11.1"
strum = "0.27.1"
tabled = "0.18.0"
thiserror = "2.0.12"
tokio = { version = "1.44.1", features = ["full"] }
toml_edit = "0.22.24"
tracing = "0.1.41"
tracing-subscriber = { version = "0.3.15", default-features = false, features = [
  "std",
  "smallvec",
  "fmt",
  "ansi",
  "time",
  "json",
  "registry",
  "env-filter",
] }


[dev-dependencies]
tempfile = "3.19.0"
